# easyspeak

./: .gitignore  .gitlint  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEPENDENCIES.md  MANIFEST.in  README.md  core.py  eslint.config.mjs  extension.js  flake.nix  gitignore  index.html  justfile  linkcheckerrc  mkdocs.yml  objects.inv  pins.toml  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: benchmark.yml  docs.yml  links.yml  pipeline.yml  publish.yml  release-lang.yml  release.yml  safety.yml
0.4.0/: 404.html  index.html  objects.inv
0.4.0/commands/: index.html
0.4.0/contributing/: index.html
0.4.0/how-it-works/: index.html
0.4.0/installation/: index.html
0.4.0/license/: index.html
0.4.0/plugins/: index.html
0.4.0/troubleshooting/: index.html
0.4.0rc1/: 404.html  index.html  sitemap.xml
0.4.0rc1/changelog/: index.html
0.4.0rc1/commands/: index.html
0.4.0rc1/contributing/: index.html
0.4.0rc1/how-it-works/: index.html
0.4.0rc1/installation/: index.html
0.4.0rc1/license/: index.html
0.4.0rc1/packaging/: index.html
0.4.0rc1/plugins/: index.html
0.4.0rc1/troubleshooting/: index.html
0.4.0rc1/usage/: index.html
0.5.0/commands/: index.html
0.5.0/contributing/: index.html
0.5.0/license/: index.html
0.5.0/screenshots/: index.html
0.5.0/search/: search_index.json
0.6.0/: 404.html  index.html  objects.inv
0.6.0/changelog/: index.html
0.6.0/commands/: index.html
0.6.0/how-it-works/: index.html
0.6.0/installation/: index.html
0.6.0/packaging/: index.html
0.6.0/screenshots/: index.html
0.6.0/usage/: index.html
0.7.0/: objects.inv
0.7.0/commands/: index.html
0.7.0/how-it-works/: index.html
0.7.0/packaging/: index.html
0.7.0/plugins/: index.html
0.7.0/troubleshooting/: index.html
0.7.0/usage/: index.html
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/changelog/: index.html
0.8.0/commands/: index.html
0.8.0/contributing/: index.html
0.8.0/how-it-works/: index.html
0.8.0/installation/: index.html
0.8.0/license/: index.html
0.8.0/packaging/: index.html
0.8.0/plugins/: index.html
0.8.0/screenshots/: index.html
0.8.0/troubleshooting/: index.html
0.8.0/usage/: index.html
changelog/: index.html
data/: __init__.py  easyspeak-autostart.desktop  easyspeak-extension-refresh.service.in
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/commands/: index.html
dev/contributing/: index.html
dev/how-it-works/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/packaging/: index.html
dev/plugins/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
dev/usage/: index.html
docs/: changelog.md  commands.md  contributing.md  dependencies.md  how-it-works.md  index.md  installation.md  license.md  packaging.md  plugins.md  screenshots.md  troubleshooting.md  usage.md
docs/media/: log.txt
docs/reference/: core.md  plugins.md
gnome@easyspeak.dev/: __init__.py  extension-helpers.js  extension.js  grid.js  indicator.js  prefs.js  windows.js
how-it-works/: index.html
installation/: index.html
lang-en-1.0.0/: 404.html  index.html  sitemap.xml
lang-en-1.0.0/changelog/: index.html
lang-en-1.0.0/commands/: index.html
lang-en-1.0.0/contributing/: index.html
lang-en-1.0.0/dependencies/: index.html
lang-en-1.0.0/how-it-works/: index.html
lang-en-1.0.0/installation/: index.html
lang-en-1.0.0/license/: index.html
lang-en-1.0.0/packaging/: index.html
lang-en-1.0.0/plugins/: index.html
lang-en-1.0.0/screenshots/: index.html
lang-en-1.0.0/search/: search_index.json
lang-en-1.0.0/troubleshooting/: index.html
lang-en-1.0.0/usage/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/changelog/: index.html
latest/commands/: index.html
latest/contributing/: index.html
latest/dependencies/: index.html
latest/how-it-works/: index.html
latest/installation/: index.html
latest/license/: index.html
latest/packaging/: index.html
latest/plugins/: index.html
latest/screenshots/: index.html
latest/search/: search_index.json
latest/troubleshooting/: index.html
latest/usage/: index.html
license/: index.html
packaging/: build-in-docker.sh  build-lang-in-docker.sh  docs-mirror-root.sh  docs-redirect-latest.py  docs-sync-root.py  index.html  make-latest-redirects.py  nfpm-lang-en.yaml  nfpm.yaml  plan_lang_release.py  stage-bundle.sh  stage-lang.sh  sync-docs-root.py  update_pins.py
plugins/: 00_eyetrack.py  00_mousegrid.py  apps.py  browser.py  dictation.py  files.py  index.html  media.py  system.py
reference/core/: index.html
reference/plugins/: index.html
screenshots/: index.html
src/: extension-helpers.js  extension.js  metadata.json  prefs.js
src/core/: __init__.py  __main__.py  about.py  cli.py  config.py  desktop_integration.py  extension_install.py  gnome_extension.py  hotkey.py  log.py  main.py  mediakeys.py  speech.py  tray.py  wakeword.py
src/data/: __init__.py  easyspeak.desktop
src/gnome@easyspeak.dev/: __init__.py  extension-helpers.js  extension.js  metadata.json  prefs.js  screenshot.js
src/plugins/: 00_eyetrack.py  00_mousegrid.py  __init__.py  _atspi_insert.py  apps.py  browser.py  dictation.py  files.py  media.py  sleep.py  system.py  zz_base.py
src/schemas/: gschemas.compiled
stable/: 404.html  index.html  sitemap.xml
stable/changelog/: index.html
stable/contributing/: index.html
stable/dependencies/: index.html
stable/installation/: index.html
stable/license/: index.html
stable/plugins/: index.html
stable/screenshots/: index.html
stable/troubleshooting/: index.html
tests/acceptance/: README.md  conftest.py  test_command_recognition.py  test_voice_feedback.py  test_volume_control.py
tests/benchmarks/: README.md  conftest.py  test_whisper.py
tests/core/: conftest.py  test_config.py  test_main.py
tests/integration/: README.md  conftest.py  test_gnome_extension_unit.py  (+1 more)
troubleshooting/: index.html
usage/: index.html
(+65 files in other folders)
