[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77", "setuptools_scm>=9"]

[project]
name = "easyspeak-linux"
dynamic = ["version"]
description = "Voice control for Linux desktops. Fully local, no cloud, Wayland-native."
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  {name = "Matt Hartley", email = "matt@matthartley.com"},
]
maintainers = [
  {name = "Matt Hartley", email = "matt@matthartley.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment :: Gnome",
  "Topic :: Home Automation",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Utilities",
]
keywords = [
  "control",
  "desktop",
  "gnome",
  "head",
  "offline",
  "tracking",
  "voice",
  "wayland",
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
  "faster-whisper>=1.2.1",
  "jeepney>=0.9",
  "numpy>=2.2.6",
  # "openwakeword",  # requires Python <3.13 for speexdsp-ns (missing wheels)
  "onnxruntime>=1.23.2",
  "onnxruntime<1.24 ; python_full_version < '3.11'",
  "pyaudio>=0.2.14",
]

[project.optional-dependencies]
acceptance = [
  "pytest>=8",
  "pytest-bdd>=7",
]
benchmark = [
  "pytest>=8",
  "pytest-benchmark>=5",
]
head-tracking = [
  "opencv-python>=4.13.0.90",
  "sixdrepnet>=0.1.6",
]
integration = [
  "pytest>=8",
]
mypy = [
  "mypy>=1.19.1",
  "types-pyaudio>=0.2.16.20250801",
]
unittest = [
  "coverage[toml]>=7.14",
  "pytest>=8",
]

[project.scripts]
easyspeak = "easyspeak.core.main:run"

[project.urls]
"Source Code" = "https://github.com/ctsdownloads/easyspeak"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
show_missing = true

[tool.coverage.run]
source = ["src"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# Folders excluded from default discovery are opt-in: they need preparation
# the plain unit run doesn't (large model downloads, real external binaries,
# an audio server). Each has its own `just` target.
#   tests/acceptance  -> `just acceptance`  (Gherkin scenarios; needs pytest-bdd)
#   tests/benchmarks  -> `just benchmark`   (downloads large Whisper models)
#   tests/integration -> `just integration` (runs real piper/audio-player binaries)
addopts = "--ignore=tests/acceptance --ignore=tests/benchmarks --ignore=tests/integration"

[tool.ruff.lint]
extend-select = ["I"]  # "ALL" one day
extend-ignore = ["D", "E722"]

[tool.setuptools.package-dir]
easyspeak = "src"

# The bundled GNOME Shell extension is package data: core.extension_install
# copies it into the user's extensions directory at startup, so it must ship
# inside the wheel (alongside the easyspeak package), not just the sdist.
[tool.setuptools.package-data]
easyspeak = ["extension.js", "metadata.json"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

# # TensorFlow Runtime from PyPI (tflite-runtime==2.14.0) only supports
# # Python <3.12 (see dependencies above)
# [tool.uv.sources]
# openwakeword = { git = "https://github.com/dscripka/openWakeWord" }
